immich/deployment-immich-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: server
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: IMMICH_LOG_LEVEL
              value: verbose
            - name: DB_DATABASE_NAME
              valueFrom:
                secretKeyRef:
                  key: dbname
                  name: immich-db-app
            - name: DB_HOSTNAME
              valueFrom:
                secretKeyRef:
                  key: host
                  name: immich-db-app
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: immich-db-app
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  key: user
                  name: immich-db-app
            - name: IMMICH_MACHINE_LEARNING_URL
              value: http://immich-machine-learning:3003
            - name: REDIS_HOSTNAME
              value: valkey
            - name: IMMICH_WORKERS_INCLUDE
              value: api
          image: ghcr.io/immich-app/immich-server:v3.3.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
            - containerPort: 2283
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 190
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 45
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /extlib/Bilder
              name: extlib-bilder
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - name: data
          nfs:
            path: /media/Seven/Immich
            server: mainframe.ak-online.be
        - name: extlib-bilder
          nfs:
            path: /media/Seven/Bilder
            server: mainframe.ak-online.be
