immich/service-immich-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
  name: immich-server
  namespace: immich
spec:
  ports:
    - name: http
      port: 2283
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  type: LoadBalancer
