immich/service-immich-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: valkey
    app.kubernetes.io/service: immich-valkey
  name: immich-valkey
  namespace: immich
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: redis
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: valkey
  type: ClusterIP
